--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Eric Chi, a current graduate student of Information Studies at The University of Texas at Austin. I have 3+ year experience in social design & research and 2+ years experience in front-end development.</strong></p>
 										
-										<p>With a background both in social sciences and information science, my focus is on users. This speaks to why I'm passionate about solving problems in both the digital and real world for all users. My work combines user research, user-centered design and UX/UI design. </p>
+										<p>With a background both in social sciences and information science, my focus is all on users. This speaks to why I'm passionate about solving problems in both the digital and real world for all users. My work combines user research, user-centered design and UI/UX design. </p>
 
 										<p> As a student and designer, I desire challenges and chances to push myself. I believe challenges are the best method of self-reflection, which is the key to outstanding design. My career goal is to deliver a simple, but wonderful experience to all users.</p>
 
