--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Coding</h3>
-									<p>To me, coding is not only a powerful tool but also a new perspective on the world. From back-end to front-end, I've learned C/C++, Python, HTML/CSS, PHP and Javascript. </p>
+									<p>To me, coding is not only a powerful tool but also a new perspective on the world. From back-end to front-end, I've learned Python, HTML/CSS, Bootstrap, PHP, Javascript and React.js. </p>
 									
 								</div>
 							</div>
