--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -28,11 +28,12 @@
 			
 		</header>
 
-		<div class="caption dark animated wow pulse clearfix">
+		<div class="caption dark pulse clearfix focus-in-contract-bck">
 			<h1>QJ Farm App</h1>
 			<p>UI/UX</p>
 			<hr>
 		</div>
+		
 		
 	</section><!--  End billboard  -->
 
