--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -28,7 +28,7 @@
 			
 		</header>
 
-		<div class="caption dark pulse clearfix focus-in-contract-bck">
+		<div class="caption dark clearfix focus-in-contract-bck">
 			<h1>QJ Farm App</h1>
 			<p>UI/UX</p>
 			<hr>
