--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -58,7 +58,7 @@
 			
 		</header>
 
-		<div class="caption dark animated wow pulse clearfix">
+		<div class="caption dark clearfix focus-in-contract-bck">
 			<h1>So Cool English</h1>
 			<p>Web Development / UIUX</p>
 			<hr>
