--- a/vote.html
+++ b/vote.html
@@ -27,12 +27,13 @@
 		</header>
 
 		<div class="caption dark clearfix">
-			<div class="animated wow pulse">
+			<div class="focus-in-contract-bck">
+			
 			<h1>#Vote</h1>
 			<p>Front-End Development</p>
-		</div>
+			</div>
 
-			<a href="demo.html" class="boton animated wow rubberBand">
+			<a href="demo.html" class="boton">
 			View Demo 
 			</a>
 			
