--- a/Collection.html
+++ b/Collection.html
@@ -30,7 +30,7 @@
 			
 		</header>
 
-		<div class="caption dark animated wow pulse clearfix">
+		<div class="caption dark clearfix focus-in-contract-bck">
 			<h1>Design Collection</h1>
 			<p>UI/Design</p>
 			<hr>
