--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -188,8 +188,8 @@
 		<strong>1. Items: Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users.<br><br>
 		2. Events: Create and reserve events <br><br>
 		3. Recipes: Users have to cook almost everything that bought from the farm so recipe is a powerful tool to attract users to come back even after purchasing.<br><br>
-		4. Plants: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, when can gain real stuff from the farm in next order. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
-		5. Message: User can send message directly to QJ Farm. It helps both side to communicate efficiently and easily. <br><br></strong>
+		4. Game: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, they can gain real stuff from the farm in next order. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
+		5. Message: User can send message directly to QJ Farm. It helps both side to communicate efficiently and easily. <br><br></strong><br>
 
 
 		We listed three goals as well:<br><br>
