--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -187,7 +187,7 @@
 
 		<strong>1. Items: Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users.<br><br>
 		2. Events: Create and reserve events <br><br>
-		3. Recipes: Users have to cook almost everything that bought from the farm so recipe is a powerful tool to attract users to come back even after purchasing.<br><br>
+		3. Recipes: Users have to cook almost everything that bought from the farm so recipe is a powerful tool to attract users to come back even after purchasing. We also mark out the ingredients that users could buy directly from the Farm.<br><br>
 		4. Game: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, they can gain real stuff from the farm in next order. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
 		5. Message: User can send message directly to QJ Farm. It helps both side to communicate efficiently and easily. <br><br></strong><br>
 
@@ -263,17 +263,28 @@
 
 
 			
-	<iframe style="border: none;" width="1000px" height="700px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
+	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
 
 
 
 	<h2 class="animated wow fadeInDown">Add items and events for QJ Farm</h2>
 
 
-	<iframe style="border: none;" width="1000px" height="700px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
+	<iframe style="border: none;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUgjOza4x36hMCBFI9X9MJMkh%2FAdd-items-events%3Fnode-id%3D0%253A1%26viewport%3D-517%252C3%252C0.172938%26scaling%3Dscale-down" allowfullscreen></iframe>
+
+	<h2 class="animated wow fadeInDown">Game & Recipes</h2>
+
+	<div class="animated wow fadeIn">
+	<img src="work/img/game.svg">
+	<img src="work/img/recipe.svg">
+</div>
 
 		
 </section>
+
+<hr>
+
+<img id="mock" class="wow animated fadeInDown" src="work/img/qj_mockup.jpg" >
 
 	<footer>
 		<div class="wrapper">
