--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -239,7 +239,7 @@
 		•	Should search function be included<br>
 		•	Should there be filter for items and events<br><br>
 
-		and son on. <br>After revising over and over, we made our first interactive prototype.
+		<br>After revising over and over, we made our first interactive prototype.
 
 	
 
