--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -40,7 +40,7 @@
 	<div class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
-		<p>It is an app aims to provide a platform which allows consumers to pre-order/order products and reserve events of QJ farm and also allows QJ Farm to undate and send their products easily. The project includes complete process of ux research, solution ideation and ui design. We’ve conduct over 100+ hour in field research and it is one of our proposals.  </p>
+		<p>It is an app aims to provide a platform which allows consumers to pre-order/order products and reserve events of QJ farm and also allows QJ Farm to update their inventory and events easily. The project includes complete process of ux research, solution ideation and ui design. We’ve conduct over 100+ hour in field research and it is one of our proposals.  </p>
 	</div>
 		</div>
 
