--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -78,14 +78,14 @@
 
 	<section class="background wrapper">
 		<h2 class="animated wow fadeInUp">Background</h2>
-		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share the risks of farming. When consumers sharing risks with QJ CSA farm, they can gain the organic and eco-friendly farm products as return. 
+		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share risks of farming. When consumers sharing risks with QJ CSA Farm, they gain organic and eco-friendly farm products as return. 
 		<br><br>
-		QJ CSA Farm is a small/medium scale farm located at the edge of city. The farm practices in organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
+		QJ CSA Farm is a small/medium scale farm located at the edge of city. It practices organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more product than usual. On the other hand, there will be less products after natural disasters. It is the way how consumers share the risks with the farm. During the time when we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
+		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more product than usual. On the other hand, they will receive less products after natural disasters. It is the way how consumers share risks with the farm. During the time we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
 
 	</section>
 
@@ -99,7 +99,7 @@
 		<h2>Contextual Inquiry & Observations</h2>
 		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
 		<br>
-		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core value of that users care.
+		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
 		</span></div>
 
 		<div class="animated wow fadeInUp">		
@@ -117,7 +117,7 @@
 		<img src="work/img/hourglass.svg">
 		<img src="work/img/update.svg">
 
-		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factor, harvest of the farm is <strong>unpredictable</strong>.</p> 
+		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farm is <strong>unpredictable</strong>.</p> 
 		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
 		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
 	    </div>
@@ -134,18 +134,18 @@
 	<div class="animated wow fadeInUp">
 	<p class="t">"Flexibility"</p>
 
-	<p class="c">User desires <strong>flexibility</strong> about the regular received products from QJ Farm. Users want to choose what and how many they want to receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
+	<p class="c">User desires <strong>flexibility</strong> about the regular received products from QJ Farm. Users want to choose what and amount they want to receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. However, They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Convenience"</p>
 
-	<p class="c">User seeks <strong>convenience</strong> when it comes to order food from QJ Farm. In traditional way, consumers can either make a phone call or go to the farm directly to order products. However, there is only 5 workers including manager in the farm. At most of time, they all working in the farm instead of staying in the office. Consumers usually have troubles to make an order except subscription.</p>  
+	<p class="c">User seeks <strong>convenience</strong> when it comes to order food from QJ Farm. In traditional way, consumers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only 5 workers including manager in the farm during week day. At most of time, they all working in the farm instead of staying in the office. Consumers usually have troubles to make an order.</p>  
 	</div>
 	<div class="animated wow fadeInUp">
 	<p class="t">"Predictability"</p>
 
-	<p class="c">User cares about <strong>what will they receive recently</strong>. Although QJ Farm notifies consumers one day before their regular receiving, consumers still looking for more information for them to do other decisions. Consumers still purchase fresh goods from other marketplace. If they can know how many and what will they receive from QJ Farm earlier, they will know what should buy or not buy during other shopping.</p>
+	<p class="c">User cares about <strong>what will they receive recently</strong>. Although QJ Farm notifies consumers one day before their regular receiving, consumers look for more information for them to do other decisions. Consumers still purchase fresh goods from other marketplace. If they can know how many and what will they receive from QJ Farm earlier, they will have a plan of what should buy or not buy during other shopping.</p>
 	</div>
 	
 	
@@ -174,7 +174,7 @@
 
 	<div class="animated wow fadeInDown">
 	<h2>Brainstorming</h2>
-	<span>At the first of ideation, we started from discussing with the farm manager. We all agreed that mobile app is the option with the most potential. Next, we did brainstorming to come up with what functions shall we include in our app. </span> 
+	<span>At the first of ideation, we started from discussing with the farm manager. We all agreed that mobile app is the option with the most potential. Next, we did brainstorm to come up with what functions shall we include in our app. </span> 
 	</div>
 	<div class="animated wow fadeIn">
 	<img class="brainstorm" src="work/img/brainstorm.jpg">
@@ -187,8 +187,8 @@
 
 		<strong>1. Items: Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users.<br><br>
 		2. Events: Create and reserve events <br><br>
-		3. Recipes: Users have to cook almost everything that bought from the farm so recipe is a powerful tool to attract users to come back even after purchasing. We also mark out the ingredients that users could buy directly from the Farm.<br><br>
-		4. Game: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, they can gain real stuff from the farm in next order. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
+		3. Recipes: Users have to cook almost everything that buy from the farm so recipe is a useful tool to attract users to come back after purchasing. We also mark out the ingredients that users could buy directly from the Farm.<br><br>
+		4. Game: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, they can gain real stuff from the farm. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
 		5. Message: User can send message directly to QJ Farm. It helps both side to communicate efficiently and easily. <br><br></strong><br>
 
 
@@ -214,7 +214,7 @@
 		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
 		<h2>How does it work?</h2>
-		<span>According to unpredictable supplement and pre-order, we made orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” to accept the order. We also designed a message section for consumers and producer to communicate directly and efficiently. </span>
+		<span>According to unpredictable supplement and pre-order, we have orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” button to accept the order. We also designed a message section for consumers and producer to communicate directly and efficiently. </span>
 		</div>
 
 		<div class="animated wow fadeInUp">
