--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Eric Chi, a current graduate student of Information Studies at The University of Texas at Austin. he has 3+ years experience in social design & research and 2+ years experience in front-end development.</strong></p>
+										<p><strong>Eric Chi, a current graduate student of Information Studies at The University of Texas at Austin. He has 3+ years experience in social design & research and 2+ years experience in front-end development.</strong></p>
 										
 										<p>With a background both in social sciences and information science, my focus is all on users. This speaks to why I'm passionate about solving problems in both the digital and real world for all users. My work combines user research, user-centered design and UI/UX design. </p>
 
