--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Eric Chi's Portfolio</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 	<meta name="description" content="Eric's Portfolio" />
 	<meta name="keywords" content="UI UX Design Designer Portfolio Eric Chi Yucheng Yu-Cheng" />
 	<meta name="author" content="Eric Chi" />
