--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -85,7 +85,7 @@
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more product than usual. On the other hand, they will receive less products after natural disasters. It is the way how consumers share risks with the farm. During the time we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
+		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more products than usual. On the other hand, they will receive less products after natural disasters. It is the way how consumers share risks with the farm. During the time we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
 
 	</section>
 
@@ -98,7 +98,7 @@
 		<div class="animated wow fadeInUp">
 		<h2>Contextual Inquiry & Observations</h2>
 		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
-		<br>
+		<br><br>
 		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
 		</span></div>
 
@@ -134,7 +134,7 @@
 	<div class="animated wow fadeInUp">
 	<p class="t">"Flexibility"</p>
 
-	<p class="c">User desires <strong>flexibility</strong> about the regular received products from QJ Farm. Users want to choose what and amount they want to receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. However, They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
+	<p class="c">User desires <strong>flexibility</strong> about the regular received products from QJ Farm. Users want to choose what and when they will receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. However, They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
 	</div>
 
 	<div class="animated wow fadeInUp">
