--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -95,6 +95,7 @@
 	<section class="research wrapper">
 		
 		<h1 class="animated wow fadeInUp">User Research</h1>
+
 		<div class="animated wow fadeInUp">
 		<h2>Contextual Inquiry & Observations</h2>
 		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
@@ -106,6 +107,15 @@
 		<h2>Interview</h2>
 		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. </span>
 		</div>
+
+		
+		<div class="animated wow fadeInUp">		
+		<h2>Traditional Task Flow for QJ Farm</h2>
+		<span>We mapped the traditional task flow for taking orders for customers by phone. </span>
+		<img style="width: 100%; margin: auto;" src="work/img/orderflow.svg">
+		</div>
+		<h2></h2>
+
 
 		<div class="animated wow fadeInUp">
 		<h2>Challenges of QJ Farm</h2>
@@ -121,6 +131,8 @@
 		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
 		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
 	    </div>
+
+
 
 	</section>
 
