--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					   		</div>
 				   		</div>
 				   	</li>
+				   	<li style="background-image: url(images/img_bg_3.jpg);">
+				   		<div class="overlay"></div>
+				   		<div class="container-fluid">
+				   			<div class="row">
+					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+					   				<div class="slider-text-inner">
+					   					<div class="desc">
+						   					<h1>Love life <br> Live it</h1>
+												<p><a class="btn btn-primary btn-learn" href="mailto:chiyyyy@utexas.edu">Message Me <i class="icon-mail5"></i></a></p>
+											</div>
+					   				</div>
+					   			</div>
+					   		</div>
+				   		</div>
+				   	</li>
 				  	</ul>
 			  	</div>
 			</section>
