--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -87,6 +87,11 @@
 		<h2 class="animated wow fadeInUp">Challenge</h2>
 		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more products than usual. On the other hand, they will receive less products after natural disasters. It is the way how consumers share risks with the farm. During the time we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
 
+		<h2 class="animated wow fadeInUp">Research Questions</h2>
+		<p class="animated wow fadeInUp"> Why do the subscription number decline?<br>Is there better way than subscription?<br>How to share risk with customers without subscription?<br>What’s the specialty and unique of QJ Farm?</p>
+
+
+
 	</section>
 
 	<hr class="animated wow fadeIn">
@@ -98,10 +103,16 @@
 
 		<div class="animated wow fadeInUp">
 		<h2>Contextual Inquiry & Observations</h2>
-		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
-		<br><br>
-		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
-		</span></div>
+		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all farmers at QJ farm but also conducted it on 2 event attendants and customers. By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core values of that users care.
+			<br><br>
+		We use affinity diagram to list our notes.<br><br></span></div>
+
+		<div class="wow animated fadeInUp">
+		<img style="width:50%;display: block; margin: auto;" src="work/img/ad.png">
+		</div>
+
+
+
 
 		<div class="animated wow fadeInUp">		
 		<h2>Interview</h2>
@@ -112,7 +123,7 @@
 		<div class="animated wow fadeInUp">		
 		<h2>Traditional Task Flow for QJ Farm</h2>
 		<span>We mapped the traditional task flow for taking orders for customers by phone. </span>
-		<img style="width: 100%; margin: auto;" src="work/img/orderflow.svg">
+		<img class="icon" style="width: 100%; margin: auto;" src="work/img/orderflow.svg">
 		</div>
 		<h2></h2>
 
@@ -123,9 +134,9 @@
 	   </div>
 		<div class="animated wow fadeIn">
 
-		<img src="work/img/line-graph.svg">
-		<img src="work/img/hourglass.svg">
-		<img src="work/img/update.svg">
+		<img class="icon" src="work/img/line-graph.svg">
+		<img class="icon" src="work/img/hourglass.svg">
+		<img class="icon" src="work/img/update.svg">
 
 		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factors, harvest of the farm is <strong>unpredictable</strong>.</p> 
 		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
@@ -146,18 +157,18 @@
 	<div class="animated wow fadeInUp">
 	<p class="t">"Flexibility"</p>
 
-	<p class="c">User desires <strong>flexibility</strong> about the regular received products from QJ Farm. Users want to choose what and when they will receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. However, They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
+	<p class="c">User desires <I><b>flexibility</b></I> about the regular received products from QJ Farm. Users want to choose what and when they will receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. However, They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
 	</div>
 
 	<div class="animated wow fadeInUp">
 	<p class="t">"Convenience"</p>
 
-	<p class="c">User seeks <strong>convenience</strong> when it comes to order food from QJ Farm. In traditional way, consumers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only 5 workers including manager in the farm during week day. At most of time, they all working in the farm instead of staying in the office. Consumers usually have troubles to make an order.</p>  
+	<p class="c">User seeks <I><strong>convenience</strong></I> when it comes to order food from QJ Farm. In traditional way, consumers can either make a phone call or go to the farm directly to order products. Nonetheless, there is only 5 workers including manager in the farm during week day. At most of time, they all working in the farm instead of staying in the office. Consumers usually have troubles to make an order.</p>  
 	</div>
 	<div class="animated wow fadeInUp">
 	<p class="t">"Predictability"</p>
 
-	<p class="c">User cares about <strong>what will they receive recently</strong>. Although QJ Farm notifies consumers one day before their regular receiving, consumers look for more information for them to do other decisions. Consumers still purchase fresh goods from other marketplace. If they can know how many and what will they receive from QJ Farm earlier, they will have a plan of what should buy or not buy during other shopping.</p>
+	<p class="c">User cares about <I><strong>what will they receive recently</strong></I>. Although QJ Farm notifies consumers one day before their regular receiving, consumers look for more information for them to do other decisions. Consumers still purchase fresh goods from other marketplace. If they can know how many and what will they receive from QJ Farm earlier, they will have a plan of what should buy or not buy during other shopping.</p>
 	</div>
 	
 	
