--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -108,7 +108,7 @@
 		We use affinity diagram to list our notes.<br><br></span></div>
 
 		<div class="wow animated fadeInUp">
-		<img style="width:50%;display: block; margin: auto;" src="work/img/ad.jpg">
+		<img style="width:50%;display: block; margin: auto;" src="work/img/aff.jpg">
 		</div>
 
 
