--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg); width: 103%; margin-left: -3%">
-							<a href="SoCoolEng.html" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/img-5.jpg); width: 103%; margin-left: -3%">
+							<a href="QJ_Farm.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>So Cool English</h1>
-										<span>Web Development</span>
+										<h1>QJ Farm App</h1>
+										<span>UI/UX</span>
 									</div>
 								</div>
 							</div>
@@ -221,11 +221,11 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-5.jpg);">
-							<a href="QJ_Farm.html" target="blank"><div class="desc">
+							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
-										<h1>QJ Farm</h1>
-										<span>UI/UX</span>
+										<h1>So Cool English</h1>
+										<span>Web Development</span>
 									</div>
 								</div>
 							</div>
