--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								<div class="desc">
 									<h3>Collaboration</h3>
 									<p>Teamwork <br> makes  <br> the <br> dream <br>work. <br>
-									I embrace the opportunity to from others. </p>
+									I embrace the opportunity to cooperate from others. </p>
 								</div>
 							</div>
 						</div>
