--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Design</h3>
-									<p>Design is undividable from my daily life. With strong curiosity, I explore the designs in our world. As a UX designer, I relish interface design, graphic design and user experience design.</p>
+									<p>Design is undividable from my daily life. With strong curiosity, I explore amazing designs in our world. As a UX designer, I relish interface design, graphic design and user experience design.</p>
 								</div>
 							</div>
 						</div>
