--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -318,7 +318,7 @@
 <span>
 
 
-I gained a ton of insight into research and design from the special context fo QJ Farm. After researching markets and competitors of QJ Farm, I realized that it was a huge challenge because of the scale and characteristic of QJ Farm. A small/medium scale farm means that cost of the products is nearly impossible to be as low as large scale farm or mass-produced factory. A toxic-free and organic cultivation means that it takes more time to harvest and leads to unpredictable amount of harvest as well. Both these disadvantage directly reflect on price of the product.  However, QJ Farm invites and welcomes everyone to be part of the farm. Thus, I added message and simulation game as a bridge to build connection. In future, I hope QJ Farm could grow into a community with healthy food and wealthy mood. 
+I gained a ton of insight into research and design from the special context fo QJ Farm. After researching markets and competitors of QJ Farm, I realized that it was a huge challenge because of the scale and characteristic of QJ Farm. A small/medium scale farm means that cost of the products is nearly impossible to be as low as large scale farm or mass-produced factory. A toxic-free and organic cultivation means that it takes more time to harvest and leads to unpredictable amount of harvest as well. Both these disadvantage directly reflect on price and amount of the product.  However, QJ Farm invites and welcomes everyone to be part of the farm. Thus, I added message and simulation game as a bridge to build connection. In future, I hope QJ Farm could grow into a community with healthy food and wealthy mood. 
 </span>
 </div>
 </section>
