--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -97,14 +97,14 @@
 
 
 	<div class="demo1">
-		<div class="animated wow fadeInDown">
+		<div class="animated wow fadeIn">
 			<img id="mac" src="work/img/mac.gif" width="40%" height="40%">
 			
 	</div>
 			</div>
 
 	<section class="challenge wrapper">
-		<div class="animated wow fadeInDown">
+		<div class="animated wow fadeInUp">
 			<h2> Challenge </h2>
 				<p>English education in Asia focuses on reading and listening more than speaking and writing. High school students usually are capable of understanding English vocabulary and sentence but unable to express articulately or compose a sentence in English. After surveying 68 students first grade high school students, we concluded the primary challenges of improving speaking and writing skills in English for students. </p>
 		</div>
@@ -127,13 +127,13 @@
 
 
 	<section class="value wrapper">
-		<h2 class="animated wow fadeInDown">User's Core Value</h2>
-			<span class="animated wow fadeInDown">Deprived from survey, interview and comparative analysis, I determind three core value that user care the most. </span>
+		<h2 class="animated wow fadeInUp">User's Core Value</h2>
+			<span class="animated wow fadeInUp">Deprived from survey, interview and comparative analysis, I determind three core value that user care the most. </span>
 
 
-		<div class="animated wow zoomIn" ><img src="work/img/time-is-money.svg"><p><strong>Efficiency</strong><br>User desires a method to improve skills efficiently in tight schedule.</p></div>
-		<div class="animated wow zoomIn" data-wow-delay=".2s"><img src="work/img/promotions.svg"><p><strong>Positive Effect</strong><br>User expects a tool to bring them positive impact.</p></div>
-		<div class="animated wow zoomIn" data-wow-delay=".4s"><img src="work/img/worldwide.svg"><p><strong>Down-to-earth</strong><br>User enjoys learning things that they can apply in dailty lfie.</p></div>
+		<div class="animated wow fadeIn" data-wow-delay=".4s"><img src="work/img/time-is-money.svg"><p><strong>Efficiency</strong><br>User desires a method to improve skills efficiently in tight schedule.</p></div>
+		<div class="animated wow fadeIn" data-wow-delay=".2s"><img src="work/img/promotions.svg"><p><strong>Positive Effect</strong><br>User expects a tool to bring them positive impact.</p></div>
+		<div class="animated wow fadeIn" ><img src="work/img/worldwide.svg"><p><strong>Down-to-earth</strong><br>User enjoys learning things that they can apply in dailty lfie.</p></div>
 
 	</section>
 
@@ -143,7 +143,7 @@
 		<div class="animated wow fadeIn"><h2>Solution Design</h2>
 		<p id="q">"How could we provide an efficient tool with down-to-earth content and positive effect to users?"</p></div>
 
-		<p class="animated wow fadeInDown" id="s1">After interviewing 10 students and surveying among 68 students, we discovered that Youtube is popular media to get touch with English within users. However, most of users only regard it as an entertainment rather than a tool. Thus, we decided to start with making Youtube educational.</p>
+		<p class="animated wow fadeInUp" id="s1">After interviewing 10 students and surveying among 68 students, we discovered that Youtube is popular media to get touch with English within users. However, most of users only regard it as an entertainment rather than a tool. Thus, we decided to start with making Youtube educational.</p>
 
 
 		
@@ -163,7 +163,7 @@
 
 
 		<section class="evaluation wrapper">
-			<div class="animated wow fadeInDown"><h2>Evaluation</h2>
+			<div class="animated wow fadeInUp"><h2>Evaluation</h2>
 			<span>To evaluate our project and gain feedback, we conducted pretest-posttest with 2 classes. Total sample number was 68. <br> According to the outcome, correct rate of pronunciation increases the most (90.2%) and vocabulary comes in second place (80%). Moreover, correct rate of grammar rises the least. We speculate that due to the complexity of grammar,  it is difficult to have obvious  enhance in grammar skill. Last but not least, the correct rate of expression climbs up from 34% to 58.6%. Although long-term evaluation is still needed, we agree that So Cool English has potential to become even better in the future. </span>
 			 <div id="chart_div" style="width: 100%; height: 500px; top: 3%;"></div></div>
 
@@ -172,7 +172,16 @@
 
 		</section>
 
+
 		<section class="afterword wrapper">
+			<div class="animated wow fadeInUp">
+			<h2>Reflection</h2>
+			<h3>“Empathy always comes in the first place”</h3>
+
+			<span>I built this website on Wordpress because it will be easily for non-tech person to update and maintain. If I had more time, I would focus on succinct information architecture and seamless interface in order to provide best experience to users. In future, I suggest it could add record and test function which provides a more thorough learning experience from 0 to 100. </span>
+
+		</div>
+
 				<img class="animated wow fadeIn" src="work/img/bottom.png">
 
 			</section>
