--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -116,8 +116,13 @@
 
 		<div class="animated wow fadeInUp">		
 		<h2>Interview</h2>
-		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. </span>
+		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. <br></span>
 		</div>
+
+		
+		<h1 class="animated wow fadeInUp">What We Found</h1>
+
+
 
 		
 		<div class="animated wow fadeInUp">		
@@ -180,22 +185,22 @@
 
 
 	<section class="ideation wrapper">
-	<div class="animated wow fadeInDown">
+	<div class="animated wow fadeInUp">
 	<h1>Ideation</h1>
 	</div>
-	<div class="animated wow fadeInDown">
+	<div class="animated wow fadeInUp">
 	<h2>Persona</h2>
 	<span>Based on the behavior patterns and core values of user found in research. We made two personas to represent our potential users.</span>
 	</div>
 
-	<div class="animated wow fadeInDown">
+	<div class="animated wow fadeIn">
 	<img class="persona" src="work/img/persona1.svg">
 	</div>
-	<div class="animated wow fadeInDown">
+	<div class="animated wow fadeIn">
 	<img src="work/img/persona2.svg" class="persona"> 
 	</div>
 
-	<div class="animated wow fadeInDown">
+	<div class="animated wow fadeInUp">
 	<h2>Brainstorming</h2>
 	<span>At the first of ideation, we started from discussing with the farm manager. We all agreed that mobile app is the option with the most potential. Next, we did brainstorm to come up with what functions shall we include in our app. </span> 
 	</div>
@@ -205,28 +210,31 @@
 	</section>
 
 	<section class="brainstormconclusion wrapper">
-	<div class="animated wow fadeInDown">
-	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions:<br><br>
-
-		<strong>1. Items: Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users.<br><br>
-		2. Events: Create and reserve events <br><br>
-		3. Recipes: Users have to cook almost everything that buy from the farm so recipe is a useful tool to attract users to come back after purchasing. We also mark out the ingredients that users could buy directly from the Farm.<br><br>
-		4. Game: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, they can gain real stuff from the farm. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
-		5. Message: User can send message directly to QJ Farm. It helps both side to communicate efficiently and easily. <br><br></strong><br>
+	<div class="animated wow fadeInUp">
+	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions.<br><br>
+	</span></div>
 
 
-		We listed three goals as well:<br><br>
-
-
-
-
-	<strong>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
-	•	Provide a platform which allows QJ Farm to update and sell their inventory easily and effectively<br><br>
-	•	Create connection between consumer and producer</strong><br><br>
-
-	Based on our main functions and goals, we made our first wireframe.</span>
+	<div class="wow animated fadeIn">
+	<h2>Five Main Functions</h2>
+	<img style="width: 60%; margin-left: 18%; margin-top: 3%;" src="work/img/function.svg">
 	</div>
 
+
+	<div class="wow animated fadeInUp">
+
+	<h2>Three Goals</h2>	
+	<span>We listed three goals as well:<br></span>
+
+
+	<p>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
+	•	Provide a platform which allows QJ Farm to update and sell their inventory easily and effectively<br><br>
+	•	Create connection between consumer and producer</strong><br></p>
+
+	<span>
+	Based on our main functions and goals, we made our first wireframe.
+	</span>
+</div>
 
 	</section>
 
@@ -325,6 +333,9 @@ I gained a ton of insight into research and design from the special context fo Q
 
 
 <img id="mock" class="wow animated fadeInDown" src="work/img/qj_mockup.jpg" >
+
+
+
 
 	<footer>
 		<div class="wrapper">
