--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Eric Chi, a current graduate student of Information Studies at The University of Texas at Austin. He has 3+ years experience in social design & research and 2+ years experience in front-end & web development.</strong></p>
+										<p><strong>Eric Chi, a current graduate student of Information Studies at The University of Texas at Austin. I have 3+ years experience in social design & research and 2+ years experience in front-end & web development.</strong></p>
 										
 										<p>With a background in social sciences and information science, my focus is all on users. This speaks to why I'm passionate about solving problems in both digital and real world for all users. My work combines user research, user-centered design and UI/UX development. </p>
 
@@ -209,7 +209,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.jpg); width: 103%; margin-left: -3%">
+							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); width: 103%; margin-left: -3%">
 							<a href="QJ_Farm.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>QJ Farm App</h1>
@@ -221,7 +221,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(work/img/mac.gif);">
 							<a href="SoCoolEng.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
@@ -231,7 +231,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(work/img/vote.png);">
 								<a href="vote.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>#Vote</h1>
