--- a/Collection.html
+++ b/Collection.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Eric's Design Collection</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
 	<meta name="description" content="So Cool English Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
